<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_glossary"
        android:icon="@drawable/ic_glossary"
        android:title="@string/action_glossary"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help"
        android:title="@string/help"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info"
        android:title="@string/action_info"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_attribution"
        android:icon="@drawable/ic_attribution"
        android:title="@string/attribution"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_import"
        android:icon="@drawable/ic_import"
        android:title="@string/import_sample"
        app:showAsAction="never"/>

</menu>