<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/select_goal_type"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/basicButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basic"/>

            <Button
                android:id="@+id/advancedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advanced"/>

            <Button
                android:id="@+id/manualButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manual"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>